--- a/chckuser/index.html
+++ b/chckuser/index.html
@@ -6,6 +6,66 @@
           <title>Document</title>
 </head>
 <body>
+          <nav class="navbar navbar-expand-sm fixed-top bg-light navbar-light arc ">
+        <div class="container">
+            <a href="" class="navbar-brand  mt-0 h1 d-inline-block align-top ">
+                <img class="rounded-5" src="https://getbootstrap.com/docs/5.3/assets/brand/bootstrap-logo-shadow.png" alt="" width="30px" height="30">
+                ARC
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarnav"
+            aria-controls="#navbarnav"
+            aria-expanded="false"
+            aria-label="navbar navgation">
+            <span class="navbar-toggler-icon"></span>
+
+            </button>
+            <div class="collapse navbar-collapse "id="navbarnav">
+                   <ul class="navbar-nav " >
+                 <li class="nav-item"><a href="" class="nav-link active">Home</a>
+                </li>
+                  <li class="nav-item"><a href="" class="nav-link">About</a>
+                </li>
+                  <li class="nav-item dropdown">
+                    <a href="" class="nav-link dropdown-toggle"
+                    id="navbarDropdown"
+                    role="button"
+                    data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                      Servicse</a> 
+                    <ul class="dropdown-menu " aria-labelledby="navbarDropdown">
+                        <li><a href="#" class="dropdown-item">#vlog</a></li>
+                        <li><a href="#" class="dropdown-item">#Game</a></li>
+                        <li><a href="#" class="dropdown-item">#AI</a></li>
+                        <li><a href="#" class="dropdown-item">#Super</a></li>
+                    </ul>
+                </li>
+                  <li class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" 
+                       id="navbarDropdown"
+                      role="button"
+                      data-bs-toggle="dropdown"
+                       aria-expanded="false">Projects
+                    </a>
+
+                    <ul class="dropdown-menu " aria-labelledby="navbarDropdown">
+                        <li><a href="#" class="dropdown-item">#Apple website</a></li>
+                        <li><a href="#" class="dropdown-item">#Puppy page</a></li>
+                        <li><a href="#" class="dropdown-item">#Portfolio website</a></li>
+                        <li><a href="#" class="dropdown-item"></a></li>
+                    </ul>
+                </li>
+                  <li class="nav-item"><a href="" class="nav-link">Contact</a>
+                </li>
+             </ul>
+            </div>
+         <form class="d-flex">
+            <input type="text" class="form-control me-2">
+            <button type="submit" class="btn btn-outline-primary">serach</button>
+         </form>
+
+        </div>
+
+    </nav>
       <h2>Hello github.com</h2>  
       <h1>This is gitHub workflow </h1>
       <h2>First Creating own Repository then change to new created repo the doing in it after we finsh it commit and pullrequest to main branch to check our work if it is correct it added to main branch othrwise faild</h2>  
